# football-news

./: .gitignore  .pre-commit-config.yaml  DOCKERFILE  alembic.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
config/: html.yml  json.yml  rss.yml  vocab.yml
docs/: news_api.md
football_news/: __init__.py  __main__.py  config.py  config_loader.py  fetch_all.py  worker.py
football_news/api/: main.py
football_news/fetchers/: base.py  guardian_fetcher.py  html_fetcher.py  newsapi_fetcher.py  rss_fetcher.py
football_news/middlewares/: ratelimit.py
football_news/processors/: summary.py  tagger.py
football_news/storage/: db.py  models.py
football_news/utils/: __init__.py  logger.py
migrations/: env.py
migrations/versions/: bec7b4a20d73_create_stories_table.py
scripts/: init_db.py
tests/: conftest.py  test_api.py  test_config.py  test_enrichment.py  test_guardian_fetcher.py  test_rss_fetcher.py
tests/data/: guardian_sample.json
