[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-news"
version = "0.1.0"
description = "A football news application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # Add your project dependencies here
    # Example: "sqlalchemy", "alembic", etc.
]

[tool.setuptools.packages.find]
include = ["football_news*"]
exclude = ["config*", "alembic*", "migrations*"]